Initial model classes.
